# gmail-bot

./: README.md  pyproject.toml
src/gmailbot/: bot.py  cli.py
src/gmailbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
