[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmailbot"
version = "0.1.0"
description = "Gmail Account Automation Framework"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "SURJO99exe" }]
license = { text = "MIT" }
dependencies = [
  "selenium>=4.10.0",
  "webdriver-manager>=4.0.0",
  "typer>=0.9.0",
  "rich>=13.0.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
gbot = "gmailbot.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
